# orbslam-map-saving-extension

./: .gitignore  README.md  example_trajectory_plots.py
orb_slam2_lib/: CMakeLists.txt  package.xml
orb_slam2_lib/Vocabulary/: bin_vocabulary
orb_slam2_lib/include/: DummyPublisher.h  Failure.h  FrameDrawer.h  GUISystemBuilder.h  IFrameDrawer.h  IFrameSubscriber.h  IMapPublisher.h  IMapRenderer.h  IPublisherThread.h  KeyFrame.h  KeyFrameDatabase.h  LoopClosing.h  Map.h  MapDrawer.h  MapPoint.h  Serialize.h  System.h  Tracking.h  Viewer.h  utils.h
orb_slam2_lib/src/: DefaultImpls.cc  FrameDrawer.cc  GUISystemBuilder.cc  IMapPublisher.cc  IMapRenderer.cc  IPublisherThread.cc  KeyFrame.cc  KeyFrameDatabase.cc  LocalMapping.cc  LoopClosing.cc  Map.cc  MapDrawer.cc  MapPoint.cc  ORBmatcher.cc  System.cc  Tracking.cc  Viewer.cc
orb_slam2_ros/: CMakeLists.txt  package.xml
orb_slam2_ros/doc/: documentation.md
orb_slam2_ros/launch/: orb_slam_kitti.launch  orb_slam_kitti_from_bag.launch  zed_stereo.launch
orb_slam2_ros/msg/: ORBState.msg
orb_slam2_ros/settings/: KITTI00-02.yaml  KITTI03.yaml  KITTI04-12.yaml  ZED18392_car2.yaml
orb_slam2_ros/src/: ROSPublisher.cpp  ROSPublisher.h  ros_mono.cc  ros_rgbd.cc  ros_stereo.cc
